--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {background-color: black;
 color: white;
 }
 body {width: 500px;
-border: 15px;
+border: 15px solid green;
 padding: 50px;
 margin: 20px;
 }
