--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,10 @@
 @charset "UTF-8";
 
-table{
-  boarder:1px solid black
-}
-
-a:link{
-  text-decoration: none;
-  color:black;
-}
-
-a:visited{
-  text-decoration: none;
-  color:grey;
-}
-
-a:hover{
-  text-decoration: none;
-  font-weight: bold;
-}
-
-a:active{
-  text-decoration: none;
-  font-weight: bold;
-  color:red;
+body{
+  font:18px Arial, sans-serif;
+  background-image: url('../images/morocco.jpg');
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 
@@ -30,43 +12,71 @@ li{
   list-style-type: square;
   list-style-position: outside;
   display: inline-block;
-  padding: 0px 30px;
+  margin:0 10px;
 }
+
+
+a:link{
+  color:black;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+a:visited{
+  color:grey;
+  font-weight: normal;
+  text-decoration: none;
+}
+
+a:hover:before {
+  content: '';
+  position: fixed;
+  display: block;
+  top: 0; bottom: 0; left: 0; right: 0;
+  z-index: -1;
+  background-color: grey;
+}
+
+a:hover{
+  font-weight: bold;
+  text-decoration: none;
+}
+
+a:active{
+  font-weight: bold;
+  text-decoration: none;
+  color:red;
+}
+
+h1{
+  font-size: 200%;
+}
+
+main{
+  min-width: 800px;
+  padding:40px;
+  background-color: rgba(255,255,255,0.5)
+}
+
 section{
-  width:98%;
-  max-width:800px;
-  min-width:500px;
   border:2px solid black;
-  padding:30px;
+  padding:20px;
   margin:20px;
   background-color: mistyrose;
 }
 
-body {
-  background-image:url(../images/food.jpeg);
-  background-color: white;
-  background-repeat: no-repeat;
-  background-size:contain;
-  background-attachment: fixed;
+footer{
+  border:2px solid black;
+  background-color: mistyrose;
+  width:80%
+  font-size: 80%;
+  padding:20px;
 }
-
-header{
-  color: red;
-}
-/*
-ul{
-  font-weight: bold;
-}
-*/
 
 p{
-  color: red;
+  width:inherit;
 }
 
-h1{
-  color: green;
-}
-
-footer{
-  font-size: 15px;
+table{
+  boarder:1px solid black
 }
