--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ section{
 footer{
   border:2px solid black;
   background-color: mistyrose;
-  width:80%
+  width:80%;
   font-size: 80%;
   padding:20px;
 }
@@ -80,6 +80,9 @@ p{
 table{
   border:1px solid black;
   border-collapse: collapse;
-  width: 800px
+  width: 800px;
   background-color: skyblue;
 }
+td{
+  border:1px solid black;
+  }
