--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,24 @@
   padding: 20px;
   margin:20px;
   background-color: mistyrose;
+  float: left;
 }
-
+.tuesday{
+  border:1px solid black;
+  width: 500px;
+  padding: 20px;
+  margin:20px;
+  background-color: mistyrose;
+  float: left;
+}
+.wednesday{
+  border:1px solid black;
+  width: 500px;
+  padding: 20px;
+  margin:20px;
+  background-color: mistyrose;
+  float: left;
+}
 .warning{
   color: red;
 }
@@ -66,7 +82,10 @@ h1{
 main{
   min-width: 800px;
   padding:40px;
-  background-color: rgba(255,255,255,0.5)
+  background-color: rgba(255,255,255,0.5);
+  overflow: auto;
+  
+
 }
 
 section{
@@ -82,6 +101,7 @@ footer{
   width:80%;
   font-size: 80%;
   padding:20px;
+
 }
 
 p{
