--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+.cat{
+  border:1px solid black;
+  padding: 1px;
+  margin: 10px;
+position: relative;
+left: 200px;
+}
 
 .monday{
   border:1px solid black;
@@ -84,7 +91,7 @@ main{
   padding:40px;
   background-color: rgba(255,255,255,0.5);
   overflow: auto;
-  
+
 
 }
 
