--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+.fixed{
+  position: fixed;
+  border: 10px;
+  right: 10px;
+}
 .cat{
   border:1px solid black;
   padding: 1px;
