--- a/Flex/css/style.css
+++ b/Flex/css/style.css
@@ -11,6 +11,8 @@
   margin:10px;
   padding:20px;
   border: 1px solid black;
+  justify-content: center;
+  
 }
 
 @media screen and (max-width:600px){
